tests/error/comptime/check_slice_construction06.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: begin address points to an object that is after the end address
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(&i + 1, &i);
	});
}
